syntax = "proto3";

package code_executor;

service Executor {
  rpc Execute (CodeRequest) returns (CodeReply);
}

message CodeRequest {
  string language = 1;
  string source_code = 2;
  string option = 3;
}

message CodeReply {
  string result = 1;
}
